style: atualizar paleta de cores global e estilos de hover dos ícones

--- a/index.html
+++ b/index.html
@@ -67,15 +67,15 @@
                                 </li>
                                 <li>
                                     <i class="fa-solid fa-location-dot"></i>
-                                    <span>Brasil - Manaus, AM</span>
+                                    <span>Mitu, Vaupes, Colombia</span>
                                 </li>
                             </ul>
 
                             <div class="hero__socials">
-                                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-                                <a href="#"><i class="fa-brands fa-instagram"></i></a>
-                                <a href="#"><i class="fa-brands fa-github"></i></a>
-                                <a href=""><i class="fa-brands fa-codepen"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin-in linkedin"></i></a>
+                                <a href="#"><i class="fa-brands fa-instagram instagram  "></i></a>
+                                <a href="#"><i class="fa-brands fa-github github"></i></a>
+                                <a href=""><i class="fa-brands fa-codepen codepen"></i></a>
                             </div>
                         </div>
 
