feat: adicionar tooltips e ajustar hover dos ícones sociais do hero

--- a/index.html
+++ b/index.html
@@ -72,10 +72,25 @@
                             </ul>
 
                             <div class="hero__socials">
-                                <a href="#"><i class="fa-brands fa-linkedin-in linkedin"></i></a>
-                                <a href="#"><i class="fa-brands fa-instagram instagram  "></i></a>
-                                <a href="#"><i class="fa-brands fa-github github"></i></a>
-                                <a href=""><i class="fa-brands fa-codepen codepen"></i></a>
+                                <a href="#" class="icon-container">
+                                    <span class="tooltip">LinkedIn</span>
+                                    <i class="fa-brands fa-linkedin-in linkedin"></i>
+                                </a>
+
+                                <a href="#" class="icon-container">
+                                    <span class="tooltip">Instagram</span>
+                                    <i class="fa-brands fa-instagram instagram"></i>
+                                </a>
+
+                                <a href="#" class="icon-container">
+                                    <span class="tooltip">Github</span>
+                                    <i class="fa-brands fa-github github"></i>
+                                </a>
+
+                                <a href="#" class="icon-container">
+                                    <span class="tooltip">CodePen</span>
+                                    <i class="fa-brands fa-codepen codepen"></i>
+                                </a>
                             </div>
                         </div>
 
