feat: adicionar links reais e target blank aos icones sociais

--- a/index.html
+++ b/index.html
@@ -72,22 +72,26 @@
                             </ul>
 
                             <div class="hero__socials">
-                                <a href="#" class="icon-container">
+                                <a href="https://www.linkedin.com/in/gioenv" target="_blank" rel="noopener noreferrer"
+                                    class="icon-container">
                                     <span class="tooltip">LinkedIn</span>
                                     <i class="fa-brands fa-linkedin-in linkedin"></i>
                                 </a>
 
-                                <a href="#" class="icon-container">
+                                <a href="https://www.instagram.com/gio.env/" target="_blank" rel="noopener noreferrer"
+                                    class="icon-container">
                                     <span class="tooltip">Instagram</span>
                                     <i class="fa-brands fa-instagram instagram"></i>
                                 </a>
 
-                                <a href="#" class="icon-container">
+                                <a href="https://github.com/GiovannyCosta" target="_blank" rel="noopener noreferrer"
+                                    class="icon-container">
                                     <span class="tooltip">Github</span>
                                     <i class="fa-brands fa-github github"></i>
                                 </a>
 
-                                <a href="#" class="icon-container">
+                                <a href="https://codepen.io/gioEnv" target="_blank" rel="noopener noreferrer"
+                                    class="icon-container">
                                     <span class="tooltip">CodePen</span>
                                     <i class="fa-brands fa-codepen codepen"></i>
                                 </a>
